<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/business_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/business_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background">

            <ImageView
                android:id="@+id/card_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/business_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_edit_hint"
                app:layout_constraintBottom_toTopOf="@id/business_card_contact"
                app:layout_constraintStart_toEndOf="@id/card_photo"
                app:layout_constraintTop_toTopOf="@id/card_photo" />

            <TextView
                android:id="@+id/business_card_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_edit_hint"
                app:layout_constraintStart_toStartOf="@id/business_card_name"
                app:layout_constraintTop_toBottomOf="@id/business_card_name" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_str"
                app:layout_constraintBottom_toBottomOf="@id/business_card_container"
                app:layout_constraintEnd_toEndOf="@id/business_card_container" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>